--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/bottom-tabs": "^7.8.11",
-    "@react-navigation/drawer": "^7.7.8",
+    "@react-navigation/drawer": "^7.7.11",
+    "@react-navigation/native": "^7.1.27",
     "@react-navigation/native-stack": "^7.8.5",
     "expo": "~54.0.27",
     "expo-status-bar": "~3.0.9",
